# quant-btc

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: dashboard.py
config/: backtest_config.yaml  data_config.yaml  portfolio.yaml  strategies.yaml  strategies_bollinger_squeeze.yaml  strategies_enhanced_rsi.yaml  strategies_mean_reversion.yaml  strategies_multi_signal.yaml  strategies_oi_divergence.yaml  strategies_rsi_divergence.yaml  strategies_sentiment.yaml  strategies_trend_follow.yaml  strategies_v2_optimized.yaml
scripts/: compare_strategies.py  download_all.py  export_results.py  inspect_data.py  leverage_scan.py  monte_carlo.py  optimize.py  run_backtest.py  run_paper.py  run_portfolio.py  sensitivity_heatmap.py  trade_analysis.py  update_and_export.py  walk_forward.py
src/backtest/: __init__.py  backtester.py  monte_carlo.py  optimizer.py  portfolio.py  visualizer.py  walk_forward.py
src/data/: __init__.py  data_merger.py  downloader.py  market_data.py
src/engine/: __init__.py  rule_engine.py
src/indicators/: __init__.py  technical.py
src/live/: __init__.py  data_feed.py  notifier.py  paper_trader.py
src/utils/: config.py
tests/: conftest.py  test_backtester.py  test_indicators.py  test_rule_engine.py
web/: index.html  package-lock.json  package.json
web/public/data/: BTCUSDT_equity_curve.json  BTCUSDT_metrics.json  BTCUSDT_monthly_returns.json  BTCUSDT_trades.json  ETHUSDT_equity_curve.json  ETHUSDT_metrics.json  ETHUSDT_monthly_returns.json  ETHUSDT_trades.json  SOLUSDT_equity_curve.json  (+10 more)
web/src/: App.jsx  index.css
(+26 files in other folders)
